FIx breadcrumb on mobile phones

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -145,6 +145,8 @@ nav {
 nav ul {
   list-style: none;
   padding-left: 0;
+  display: flex;
+  gap: var(--basic-spacing);
 }
 
 nav li {
